# Sudoku

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
src/skdsudoku/engine/: board.py  solver.py  validator.py
tests/: test_board.py  test_validator.py
